add_subdirectory(parquet_context)
add_subdirectory(util)
add_subdirectory(yamlsv)
add_subdirectory(ethernet)
add_subdirectory(ch10_parquet)
add_subdirectory(parser_rewrite)
add_subdirectory(translate_1553)
# add_subdirectory(validation)
# add_subdirectory(video/parquet)
# add_subdirectory(ch10)
# add_subdirectory(tests)
